# home

./: .gitignore  Makefile  README.md  apply_acls.sh  test_bug_reproduction.sh  test_issue_20_fixes.sh
.github/: copilot-instructions.md
ACL/: acl_example_config.json  acl_schema.json  apply_acls.sh  example_1.json  example_2.json  test.json
llm/prompts/: architecture-audit.md
mcp_servers/: pyproject.toml
mcp_servers/servers/ansible-mcp/: pyproject.toml
mcp_servers/servers/ansible-mcp/src/ansible_mcp/: __init__.py
mcp_servers/servers/gh-api-mcp/: pyproject.toml
mcp_servers/servers/gh-api-mcp/src/gh_api_mcp/: __init__.py
modules/acl/: JSON_OUTPUT.md  README.md  TESTING.md  TODO.md  apply_acls.sh  benchmark_performance.sh  complete.json  debug_engine.sh  depth_test_config.json  engine.sh  engine_original.sh  final_test_config.json  minimal.json  minimal_test.json  run_tests.sh  schema.json  test_acl_logic.sh  test_engine.sh  test_engine_direct.sh  test_engine_issue20.sh  test_fixtures.sh  test_framework.sh  test_integration.sh  test_json_ops.sh  test_json_output.sh  test_performance_optimization.sh  test_query.jq  test_simple.sh  test_validation.sh
modules/acl/examples/: README.md  clean_example_1.json  example_1.json  example_2.json  minimal.json  test.json  working_minimal.json
modules/acl/schemas/: README.md  alternative_format.json  format_analysis.md  format_comparison.json  schema.json
scripts/: upgrade.sh
scripts/lib/: os.sh
