[project]
name = "ansible-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexis Beaulieu", email = "alexisbeaulieu@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ansible-mcp = "ansible_mcp:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
